# cultural-events-rag-assistant

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yaml  install.sh  postman_collection.json  pyproject.toml
api/: main.py
scripts/: ingest.py  rebuild_index.py  startup.py
tests/: api_test.py  evaluate_rag.py
